[metadata]
name = manytask-checker
version = file: VERSION
author = Konstantin Chernyshev
author_email = kdchernyshev@gmail.com
description = Students' solution checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yandexdataschool/checker
classifiers =
    Development Status :: 3 - Alpha
    Typing :: Typed
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = true
packages = find:
python_requires = >= 3.9
install_requires =
    PyYAML >=5.0.0,<6.0.0
    click >=8.0,<9.0
    python-gitlab >=2.0.0,<3.0.0
    requests >=2.20.0,<3.0.0
    unshare >=0.22,<0.30; sys_platform != 'darwin'
    pytest-socket >=0.4.0,<0.5.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
python-tag=py3

[options.package_data]
checker = py.typed

[options.entry_points]
console_scripts =
    checker = checker.__main__:main

# stubs



[options.extras_require]
test =
    pytest >=6.0.0,<8.0.0
    pytest-cov >=3.0.0,<4.0.0
    pytest-mock >=3.0.0,<4.0.0
    black ==22.6.0
    mypy >=0.971
    flake8 >=4.0.0,<5.0.0
    isort >=5.10.0,<6.0.0
    types-requests >=2.20.0,<3.0.0
    types-PyYAML >=6.0.0,<7.0.0


[flake8]
max_line_length = 120
exclude = test_*.py
per-file-ignores =
    __init__.py:F401

[mypy]
ignore_missing_imports = True
no_incremental = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = False
disallow_any_generics = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
allow_untyped_decorators = True

[tool:pytest]
testpaths = tests/
python_files = test_*.py
addopts = --cov=checker/ --cov-report=term-missing tests/

[isort]
line_length=120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=checker,tests
profile = black